--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -104,6 +104,7 @@ a.back-arrow {
   .title-content,
   .panel-content {
     padding: 64px;
+
   }
 
   .left {
@@ -153,6 +154,7 @@ a.back-arrow {
   .title-content,
   .panel-content {
     padding: 24px;
+    margin-bottom: 80px;
   }
 
   .link {
